lustre/include/lustre/lustre_idl.h
@@ -1524,7 +1524,9 @@ enum obdo_flags {
                               OBD_FL_CKSUM_CRC32C,
 
         /* mask for local-only flag, which won't be sent over network */
-        OBD_FL_LOCAL_MASK   = 0xF0000000,
+	OBD_FL_OSTID	    = 0x10000000,
+	OBD_FL_LOCAL_MASK   = 0xF0000000,
+
 };
 
 #define LOV_MAGIC_V1      0x0BD10BD0
@@ -3224,7 +3226,16 @@ struct obdo {
 static inline void lustre_set_wire_obdo(struct obdo *wobdo, struct obdo *lobdo)
 {
         memcpy(wobdo, lobdo, sizeof(*lobdo));
-        wobdo->o_flags &= ~OBD_FL_LOCAL_MASK;
+	if (lobdo->o_flags & OBD_FL_OSTID) {
+		/* Currently OBD_FL_OSTID will only be used when 2.4 echo
+		 * client communicate with pre-2.4 server */
+		LASSERTF(fid_seq_is_echo(ostid_seq(&lobdo->o_oi)), DFID"\n",
+			 PFID(&lobdo->o_oi.oi_fid));
+		wobdo->o_oi.oi.oi_id = fid_oid(&lobdo->o_oi.oi_fid);
+		wobdo->o_oi.oi.oi_seq = FID_SEQ_ECHO;
+	}
+
+	wobdo->o_flags &= ~OBD_FL_LOCAL_MASK;
 }
 
 static inline void lustre_get_wire_obdo(struct obdo *lobdo, struct obdo *wobdo)
